feat: implement the first client connection logic for login handler. Close the connection if server is not running.